Artist details edits

--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
                 </div>
                 <div class="artist-content">
                     <div class="artist-savara">
-                        <div class="bio">
-                            <p>Savara Mudigi is a vocalist, percussionist, drummer and producer.
-                            </p>
-                            <p>His versatility in the band has played an instrumental role during tour and in the
-                                establishment on their imprint label: Sauti Sol Entertainment.</p>
+                        <div class="savara">
+                            <div class="bio">
+                                <p>Savara Mudigi is a vocalist, percussionist, drummer and producer.
+                                </p>
+                                <p>His versatility in the band has played an instrumental role during tour and in the
+                                    establishment on their imprint label: Sauti Sol Entertainment.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="names">
@@ -125,14 +127,17 @@
                 </div>
                 <div class="artist-content">
                     <div class="artist-poly">
-                        <div class="bio">
-
-                            <p>Polycarp Otieno is a guitarist and producer. His signature style – guitar riffs blends
-                                with the group’s mix of soulful vocal harmonies and drum rhythm.
-                            </p>
-                            <p>His love for the guitar started early when he attended free guitar lessons at All Saints
-                                Cathedral.
-                            </p>
+                        <div class="poly">
+                            <div class="bio">
+                                <p>Polycarp Otieno is a guitarist and producer. His signature style – guitar riffs
+                                    blends
+                                    with the group’s mix of soulful vocal harmonies and drum rhythm.
+                                </p>
+                                <p>His love for the guitar started early when he attended free guitar lessons at All
+                                    Saints
+                                    Cathedral.
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <div class="names">
@@ -146,12 +151,15 @@
                 </div>
                 <div class="artist-content">
                     <div class="artist-chimano">
-                        <div class="bio">
-                            <p>Willis Austin Chimano is a vocalist, keytar and saxophone player. His deep voice and
-                                flamboyant style makes him stand out in the group. Before the formation of Sauti Sol.
-                            </p>
-                            <p>Chimano contested and won in the annual Fête de la Musique music competition at the
-                                French Cultural Centre</p>
+                        <div class="chimano">
+                            <div class="bio">
+                                <p>Willis Austin Chimano is a vocalist, keytar and saxophone player. His deep voice and
+                                    flamboyant style makes him stand out in the group. Before the formation of Sauti
+                                    Sol.
+                                </p>
+                                <p>Chimano contested and won in the annual Fête de la Musique music competition at the
+                                    French Cultural Centre</p>
+                            </div>
                         </div>
                     </div>
                     <div class="names">
