--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="./images/insta.png" alt="">
+                                    <img src="./images/face.png" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img class="twitter" src="./images/twitter.png" alt="">
+                                    <img class="twitter" src="./images/inst.png" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img class="twitter" src="./images/twitter.png" alt="">
+                                    <img class="twitter" src="./images/youtube.png" alt="">
                                 </a>
                             </li>
                         </ul>
