--- a/index.html
+++ b/index.html
@@ -313,8 +313,13 @@
             </div>
         </section>
         <section class="contacts">
-            <div>
-                <input type="text" name="" id="">
+            <div class="contact-sec">
+                <div class="input">
+                    <input type="text" name="" id="">
+                </div>
+                <div class="send">
+                    <p>Send</p>
+                </div>
             </div>
         </section>
     </main>
