style contact section

--- a/index.html
+++ b/index.html
@@ -315,7 +315,10 @@
         <section class="contacts">
             <div class="contact-sec">
                 <div class="input">
-                    <input type="text" name="" id="">
+                    <div class="form__group field">
+                        <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
+                        <label for="name" class="form__label">Name</label>
+                    </div>
                 </div>
                 <div class="send">
                     <p>Send</p>
