add back to top

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <section>
             <div class="header">
                 <div class="left-header">
-                    <h4 class="heading">Sauti Sol</h4>
+                    <h4 id="top" class="heading">Sauti Sol</h4>
                     <ul class="pages">
                         <li><a href="#about">About us</a></li>
                         <li><a href="#team">Team</a></li>
                         <li><a href="#music">Music</a></li>
                         <li><a href="#video">Video</a></li>
-                        <li><a href="#contact">Contacts</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
                     </ul>
                     <div class="social">
                         <div class="social-word">
@@ -171,10 +171,7 @@
                             <em class="">Vocalist, keytar and saxophone player</em>
                         </P>
                     </div>
-                    <!-- <audio controls autoplay>
-                        <source src="horse.ogg" type="audio/ogg">
-                        <source src="horse.mp3" type="audio/mpeg">
-                    </audio> -->
+
                 </div>
             </div>
         </section>
@@ -312,7 +309,7 @@
             </div>
             </div>
         </section>
-        <section class="contacts">
+        <section id="contacts" class="contacts">
             <div class="contact-sec">
                 <div class="input">
                     <div class="form__group field">
@@ -331,6 +328,9 @@
             <p>©2021 <a href="https://silsilas.github.io/portf/">Silikhe</a>. All rights reserved. Made with Love</p>
         </em>
     </footer>
+    <a href="#top" class="back-top">
+        <img class="back" src="./images/back.png" alt="">
+    </a>
 </body>
 
 </html>
