--- a/index.html
+++ b/index.html
@@ -197,32 +197,32 @@
                             </audio>
                         </div>
                         <div class="audio">
-                            <audio controls autoplay>
+                            <audio controls>
                                 <source src="./images/songs/susana.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
-                            <audio controls autoplay>
+                            <audio controls>
                                 <source src="./images/songs/live.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
-                            <audio controls autoplay>
+                            <audio controls>
                                 <source src="./images/songs/lazizi.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
-                            <audio controls autoplay>
+                            <audio controls>
                                 <source src="./images/songs/extra.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
-                            <audio controls autoplay>
+                            <audio controls>
                                 <source src="./images/songs/insecure.mp3" type="audio/mpeg">
                             </audio>
                         </div>
                         <div class="audio">
-                            <audio controls autoplay>
+                            <audio controls>
                                 <source src="./images/songs/melanin.mp3" type="audio/mpeg">
                             </audio>
                         </div>
@@ -292,15 +292,15 @@
                 </div>
                 <div class="other-vid">
                     <div style="margin-bottom: 20px;">
-                        <video controls="false" autoplay loop="" poster="./images/cover2.jpg"
-                            src="./images/video/insecure.mp4" playsinline="" data-origwidth="0" data-origheight="0"
+                        <video controls="false" loop="" poster="./images/cover2.jpg" src="./images/video/insecure.mp4"
+                            playsinline="" data-origwidth="0" data-origheight="0"
                             style="width:450px; height:200px; object-fit:cover;" id="html5_video_ota5fwbtmgn">
 
                         </video>
                     </div>
                     <div class="video_poster">
-                        <video controls="false" autoplay loop="" poster="./images/cover.jpg"
-                            src="./images/video/insecure.mp4" playsinline="" data-origwidth="0" data-origheight="0"
+                        <video controls="false" loop="" poster="./images/cover.jpg" src="./images/video/insecure.mp4"
+                            playsinline="" data-origwidth="0" data-origheight="0"
                             style="width:450px; height:200px; object-fit:cover;" id="html5_video_ota5fwbtmgn">
 
                         </video>
